hphp/test/slow/closure/new_closure.php.expectf
Fatal error: Can't create a Closure directly in %s/test/slow/closure/new_closure.php on line 8
